Empezada practica introduccion a vue.js

--- a/index.html
+++ b/index.html
@@ -11,10 +11,28 @@
 
     <body>
 
-        <h1 id="autor">Autor: TU NOMBRE AQUÍ</h1>
+        <h1 id="autor">Autor: Jeronimo</h1>
 
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
+            <div class="jumbotron">
+                <h1 id="title">Movie List</h1>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">   
+                      <a href="https://en.wikipedia.org/wiki/The_Lord_of_the_Rings_(film_series)" class="card-link">Another link</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <a href="https://en.wikipedia.org/wiki/The_Hunger_Games_(film_series)" class="card-link">Another link</a>
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <a href="https://en.wikipedia.org/wiki/Game_of_Thrones" class="card-link">Card link</a>
+                    </div>
+                  </div>
+            </div>
             <!--
                  TODO: Mostrar datos del objeto collection. Ver archivo ./js/script.js
                - Cargar la librería de VueJS y el script ./js/script.js al final de la etiqueta <body>
@@ -29,7 +47,7 @@
             -->
 
         </div>
-
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     </body>
 
 </html>
