--- a/index.html
+++ b/index.html
@@ -11,28 +11,25 @@
 
     <body>
 
-        <h1 id="autor">Autor: Jeronimo</h1>
+        <h1 id="autor">Autor: Jeronimo Belardinelli</h1>
 
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
             <div class="jumbotron">
-                <h1 id="title">Movie List</h1>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">   
-                      <a href="https://en.wikipedia.org/wiki/The_Lord_of_the_Rings_(film_series)" class="card-link">Another link</a>
-                    </div>
-                  </div>
-                  <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                      <a href="https://en.wikipedia.org/wiki/The_Hunger_Games_(film_series)" class="card-link">Another link</a>
-                    </div>
-                  </div>
-                  <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                      <a href="https://en.wikipedia.org/wiki/Game_of_Thrones" class="card-link">Card link</a>
-                    </div>
-                  </div>
+                <h1 id="title">{{ col.collection.title }}</h1>
             </div>
+                <div class="card" v-for="i in col.collection.items" style="width: 18rem;">
+                    <div class="card-body">   
+                      <dl>
+                        <div v-for="datos in i.data">
+                          <dt>{{ datos.prompt }}</dt>
+                          <dd>{{ datos.value }}</dd>
+                        </div>
+                      </dl>
+                      <a v-bind:href="i.href">Ver</a>
+                    </div>
+                  </div>
+
             <!--
                  TODO: Mostrar datos del objeto collection. Ver archivo ./js/script.js
                - Cargar la librería de VueJS y el script ./js/script.js al final de la etiqueta <body>
@@ -48,6 +45,8 @@
 
         </div>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+        <script src="./js/script.js"></script>
+
     </body>
 
 </html>
