--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="author" content="">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
 
     <body>
@@ -15,10 +16,12 @@
 
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
-            <div class="jumbotron">
+            <div class="jumbotron bg-secondary p-5">
                 <h1 id="title">{{ col.collection.title }}</h1>
             </div>
-                <div class="card" v-for="i in col.collection.items" style="width: 18rem;">
+            <div class="container-fluid border d-flex justify-content-center">
+              <div class="row my-3">
+                <div class="card col-4 col-sm-12" v-for="i in col.collection.items" style="width: 30rem;">
                     <div class="card-body">   
                       <dl>
                         <div v-for="datos in i.data">
@@ -26,9 +29,11 @@
                           <dd>{{ datos.value }}</dd>
                         </div>
                       </dl>
-                      <a v-bind:href="i.href">Ver</a>
+                      <a class="bg-primary rounded text-white p-2 text-decoration-none" v-bind:href="i.href">Ver</a>
                     </div>
                   </div>
+                </div>
+                </div>
 
             <!--
                  TODO: Mostrar datos del objeto collection. Ver archivo ./js/script.js
