--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
-            <div class="jumbotron bg-secondary p-5">
+            <div class="jumbotron bg-light p-5">
                 <h1 id="title">{{ col.collection.title }}</h1>
             </div>
-            <div class="container-fluid border d-flex justify-content-center">
+            <div class="container-fluid d-flex justify-content-center">
               <div class="row my-3">
-                <div class="card col-4 col-sm-12" v-for="i in col.collection.items" style="width: 30rem;">
+                <div class="card col-4" v-for="i in col.collection.items" style="width: 30rem;">
                     <div class="card-body">   
                       <dl>
                         <div v-for="datos in i.data">
@@ -29,7 +29,7 @@
                           <dd>{{ datos.value }}</dd>
                         </div>
                       </dl>
-                      <a class="bg-primary rounded text-white p-2 text-decoration-none" v-bind:href="i.href">Ver</a>
+                      <a class="btn btn-primary" v-bind:href="i.href">Ver</a>
                     </div>
                   </div>
                 </div>
